--- a/src/app/modulos/listar-cfdi/filtros-cfdi/filtros-cfdi.component.html
+++ b/src/app/modulos/listar-cfdi/filtros-cfdi/filtros-cfdi.component.html
@@ -102,7 +102,7 @@
               (change)="selectNivelAprobacion(select_nivel_aprobacion.value)">
               <option value=" 0 "> Seleccione un Nivel</option>
               <option value=" 1 "> Validador Compras </option>
-              <option value=" 2 "> Validador CXC </option>
+              <option value=" 2 "> Validador CXP </option>
               <option value=" 3 "> Validador Supervisor </option>
             </select>
           </div>
