--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
@@ -1,4 +1,4 @@
-<app-form-comprobacion-header (onContinuar)="guardarFormHeader($event)" (onCancelar)="cancelarComprobacion()"
+<app-form-comprobacion-header (onContinuar)="guardarFormHeader($event)" (onCancelar)="cancelar()"
   [lista_contribuyente]="lista_contribuyentes" [lista_moneda]="lista_monedas"
   [lista_centro_costos]="lista_centros_costo" [numero_comprobacion]='numero_comprobacion'
   [comprobacion_header]="comprobacion_header">
@@ -9,8 +9,8 @@
   <div class="col-md-4 col-sm-6 col-xs-12">
     <div class="form-group">
       <label for="tipo_comprobacion">Carga de Comprobantes</label>
-      <select class="form-control" (change)="onTipoComprobanteSelect(select_tipo_comprobante)" #select_tipo_comprobante
-        id="tipo_comprobacion" aria-placeholder="Seleccione tipo de comprobante">
+      <select class="form-control" [(ngModel)]="tipo_comprobante" id="tipo_comprobacion"
+        aria-placeholder="Seleccione tipo de comprobante">
         <option value="" disabled selected> Seleccione tipo de comprobante... </option>
         <option value="nacional"> Comprobación con XML</option>
         <option value="internacional"> Comprobación sin XML</option>
@@ -21,20 +21,20 @@
 
 <app-carga-comprobante-nacional *ngIf="tipo_comprobante === 'nacional'" (cancelarCarga)="cancelarCarga()"
   (enviarArchivo)="setArchivo($event)" [lista_cuentas]="lista_cuentas" (enviarConceptos)="enviarConceptos($event)"
-  (enviarDetalleFactura)="setDetalles($event)" (setTimpoCambio)="setTipoCambio($event)">
+  (enviarDetalleFactura)="setDetalles($event)" (setTimpoCambio)="setTipoCambio($event)"
+  (onAgregarComprobante)="agregarComprobante($event)">
 </app-carga-comprobante-nacional>
 
-<app-carga-comprobante-extranjero *ngIf="tipo_comprobante === 'internacional'" [solicitud]="solicitud"
-  [lista_monedas]="lista_monedas" [lista_cuentas]="lista_cuentas" [numero_comprobante]="numero_viaje"
-  (actualizarFecha)="actualizarFecha($event)" (enviarDetalleFactura)="setDetalles($event)"
-  (enviarConceptos)="enviarConceptos($event)" (enviarDatos)="enviarDatos($event)" (cancelarCarga)="cancelarCarga()"
-  (setTimpoCambio)="setTipoCambio($event)">
+<app-carga-comprobante-extranjero *ngIf="tipo_comprobante === 'internacional'"
+  [comprobacion_header]="comprobacion_header" [lista_monedas]="lista_monedas" [lista_cuentas]="lista_cuentas"
+  [numero_comprobante]="numero_viaje" (actualizarFecha)="actualizarFecha($event)"
+  (enviarDetalleFactura)="setDetalles($event)" (enviarConceptos)="enviarConceptos($event)"
+  (cancelarCarga)="cancelarCarga()" (setTimpoCambio)="setTipoCambio($event)">
 </app-carga-comprobante-extranjero>
 
-<app-lista-comprobantes-carga *ngIf="numero_comprobacion" #lista_comprobantes
-  [lista_comprobaciones]="lista_comprobaciones" [total_comprobado]="total_comprobado" [id_solicitud]="id_solicitud"
-  [tipo_cambio]="tipo_cambio" (eliminarComprobacion)="eliminarComprobacion($event)" (cancelar)="cancelar()"
-  (comprobar)="comprobar($event)">
+<app-lista-comprobantes-carga *ngIf="numero_comprobacion" [lista_comprobaciones]="lista_comprobaciones"
+  [numero_comprobacion]="numero_comprobacion" [totales]="totales" (eliminarComprobante)="eliminarComprobante($event)"
+  (onCancelar)="cancelar()" (onComprobar)="comprobar($event)" (onEliminarComprobacion)="eliminarComprobacion()">
 </app-lista-comprobantes-carga>
 
 <app-loading-modal *ngIf="show_loading"></app-loading-modal>
