[add] ajuste de lista y filtro para bandeja de aprobacion en comprobacion de gastos

--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
@@ -28,7 +28,7 @@
               <th scope="">Monto Reembolsar</th>
               <th scope="">Moneda</th>
               <th scope="">Centro Costo</th>
-              <th scope="">Compañia</th>
+              <th scope="">Compañía</th>
               <th scope="">Usuario Aprobador</th>
               <th scope="">Acción </th>
             </tr>
