--- a/src/app/modulos/comprobaciones-gastos/filtro-comprobaciones-gastos/filtro-comprobaciones-gastos.component.html
+++ b/src/app/modulos/comprobaciones-gastos/filtro-comprobaciones-gastos/filtro-comprobaciones-gastos.component.html
@@ -3,95 +3,77 @@ filtrar por comprobaciones de gastos falta definir el filtro
 por el momento se puso este filtro de notas de crédito -->
 
 <div id="content" class="row">
-  <div class="panel-heading col" style="padding: 10px !Important;">
+  <div class="panel-heading col-12" style="padding: 10px !Important;">
     <button id="filtroConsulta" class="btn btn-primary mb-2 " type="button" data-toggle="collapse"
       data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
       Filtrar Consulta
-      <i class="fa fa-filter fa-fw"></i>
+      <em class="fa fa-filter fa-fw"></em>
     </button>
     <div class="collapse" id="collapseExample">
       <div class="row">
         <div class="col-md-12">
           <div class="panel-body">
-            <form>
+            <form [formGroup]="filtro_comprobacion">
               <fieldset>
-                <legend class="p-b-15" style="font-size:1rem">{{ titulo }}</legend>
+                <legend class="p-b-15" style="font-size:1rem">Filtrar Comprobaciones</legend>
                 <div class="form-row">
 
                   <div class="col-md-3">
+                    <label for="contribuyente">Usuario<span class="text-danger">*</span> </label>
+                    <select2 [data]="lista_contribuyentes" [options]="{placeholder: 'Seleccione un Usuario'}"
+                      name="contribuyente" id="selec_contribuyente_gasto_viaje">
+                    </select2>
+                  </div>
+
+                  <div class="col-md-3">
                     <label for="contribuyente">Contribuyente<span class="text-danger">*</span> </label>
-                    <select2 [data]="lista_contribuyentes" [value]="startValue_contribuyente"
-                      [options]="{placeholder: 'Seleccione un Contribuyente'}"
+                    <select2 [data]="lista_contribuyentes" [options]="{placeholder: 'Seleccione una Contribuyente'}"
                       (valueChanged)="onContribuyenteSelected($event)" name="contribuyente"
                       id="selec_contribuyente_gasto_viaje">
                     </select2>
                   </div>
 
                   <div class="col-md-3">
-                    <label for="selec_sucursal_gasto_viaje">Sucursal </label>
-                    <select2 [data]="lista_sucursales" [value]="startValue_sucursal"
-                      [options]="{placeholder: 'Seleccione un Hotel'}" (valueChanged)="onSucursalSeleccionado($event)"
-                      name="selec_sucursal_gasto_viaje" id="selec_sucursal_filtro_solicitudes">
+                    <label for="selec_sucursal_gasto_viaje">Centro de Costos </label>
+                    <select2 [data]="lista_centros_costo" [options]="{placeholder: 'Seleccione Centro Costo'}"
+                      (valueChanged)="onCentroCostoSelected($event)" name="centro_costo" id="centro_costo">
+                    </select2>
+                  </div>
+
+                  <div class="col-md-3">
+                    <label for="selec_estatus_filtro">Estatus Aprobación </label>
+                    <select2 [data]="lista_estatus" [options]="{placeholder: 'Seleccione Estatus'}"
+                      (valueChanged)="onEstatusSeleccionado($event)" name="selec_estatus_filtro"
+                      id="selec_estatus_filtro_solicitudes">
+                    </select2>
+                  </div>
+
+                  <div class="col-md-3">
+                    <label for="selec_estatus_filtro">Tipo de Gasto</label>
+                    <select2 [data]="lista_estatus" [options]="{placeholder: 'Seleccione Tipo de gasto'}"
+                      name="selec_estatus_filtro" id="selec_estatus_filtro_solicitudes">
                     </select2>
                   </div>
 
                   <div class=" col-md-3">
-                    <label for="nombre_proveedor">Nombre Proveedor </label>
-                    <input placeholder="Nombre Proveedor" type="text" class="form-control"
-                      [(ngModel)]="filtro_anticipo.nombre_proveedor" maxlength="50" name="nombre_proveedor"
-                      id="nombre_proveedor_filtro" />
+                    <label for="folio_comprobacion">Folio Comprobación </label>
+                    <input formControlName="folio_comprobacion" placeholder="Folio Comprobación" type="text"
+                      class="form-control" maxlength="20" name="folio_comprobacion" id="folio_comprobacion_filtro" />
                   </div>
-
-                  <!-- <div class=" col-md-3">
-                    <label for="numero_anticipo_sap">Número Factura Sap </label>
-                    <input placeholder="Número Factura Sap" type="text" class="form-control"
-                      [(ngModel)]="filtro_anticipo.numero_factura_sap" maxlength="20" name="numero_anticipo_sap"
-                      id="numero_anticipo_sap_filtro" />
-                  </div>
-
-                  <div class=" col-md-3">
-                    <label for="numero_anticipo_sap">Folio SAP </label>
-                    <input placeholder="Folio SAP" type="text" class="form-control"
-                      [(ngModel)]="filtro_anticipo.numero_anticipo_sap" maxlength="20" name="numero_anticipo_sap"
-                      id="numero_anticipo_sap_filtro" />
-                  </div> -->
 
                   <div class="col-md-3">
                     <label for="nombre">Registro Desde </label>
-                    <my-date-picker name="fechaIniViaje" id="fecha_inicio_viaje_anticipo_gasto" [(ngModel)]="fech_ini"
-                      [placeholder]="fecha_inicio_palceholder" [options]="myDatePickerOptions"
-                      (dateChanged)="onFechaInicioViaje($event)" required>
+                    <my-date-picker [ngModelOptions]="{standalone: true}" [(ngModel)]="fech_ini" name="fechaIniViaje"
+                      id="fecha_inicio_viaje_anticipo_gasto" [placeholder]="'Fecha Inicio'"
+                      [options]="_globals.myDatePickerOptions" (dateChanged)="onFechaInicioViaje($event)">
                     </my-date-picker>
                   </div>
 
                   <div class="col-md-3">
                     <label for="nombre">Registro Hasta </label>
-                    <my-date-picker name="fechaFinViaje_anticipo_viaje" id="fechaFinViaje_status_sap"
-                      [(ngModel)]="fech_fin" [placeholder]="fecha_fin_palceholder" [options]="myDatePickerOptions"
-                      (dateChanged)="onFechaFinViaje($event)" required></my-date-picker>
-                  </div>
-
-                  <div class="col-md-3">
-                    <label for="selec_sucursal_gasto_viaje">Estatus Oracle </label>
-                    <select2 [data]="lista_estatus_sap" [value]="startValue_estatus_sap"
-                      [options]="{placeholder: 'Seleccione un estatus SAP'}"
-                      (valueChanged)="onEstatusSAPSeleccionado($event)" name="selec_estatus_sap_filtro"
-                      id="selec_estatus_sap_filtro_solicitudes">
-                    </select2>
-                  </div>
-
-                  <div class="col-md-3">
-                    <label for="selec_estatus_filtro">Estatus </label>
-                    <select2 [data]="lista_estatus" [value]="startValue_estatus"
-                      [options]="{placeholder: 'Seleccione un estatus'}" (valueChanged)="onEstatusSeleccionado($event)"
-                      name="selec_estatus_filtro" id="selec_estatus_filtro_solicitudes">
-                    </select2>
-                  </div>
-
-                  <div *ngIf="esViaje" class=" col-md-3">
-                    <label for="nombre">Destino</label>
-                    <input placeholder="Destino" type="text" class="form-control" [(ngModel)]="filtro_anticipo.destino"
-                      maxlength="255" name="detalle" id="detalle" />
+                    <my-date-picker [ngModelOptions]="{standalone: true}" [(ngModel)]="fech_fin"
+                      name="fechaFinViaje_anticipo_viaje" id="fechaFinViaje_status_sap" [placeholder]="'Fecha Fin'"
+                      [options]="_globals.myDatePickerOptions" (dateChanged)="onFechaFinViaje($event)"></my-date-picker>
                   </div>
 
                 </div>
@@ -100,9 +82,10 @@ por el momento se puso este filtro de notas de crédito -->
                     <button class="btn btn-sm btn-danger m-r-5 " style="margin-left: 10px;"
                       (click)="limpiar()">Limpiar</button>
                     <button class="btn btn-sm btn-primary m-r-5 " style="margin-left: 10px;"
-                      [disabled]="filtro_anticipo.contributente_identificador == ''" (click)="buscar()">Buscar</button>
+                      (click)="buscar()">Buscar</button>
                   </div>
                 </div>
+
               </fieldset>
             </form>
           </div>
