--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
@@ -48,7 +48,7 @@
               <td>{{ item.nombre_usuario_aprobador}}</td>
               <td>
                 <div style="white-space: nowrap">
-                  <a class="btn btn-primary text-white btn ml-2" (click)="eliminar(item.id)">
+                  <a class="btn btn-primary text-white btn ml-2" (click)="eliminar(item.folio_comprobacion)">
                     <i class="far fa-trash-alt"> </i> Borrador
                   </a>
                   <button class="btn btn-primary text-white btn ml-2" (click)="editarBorrador(item.id)">
