[add]  ajuste de nombre de columna

--- a/src/app/modulos/facturas-proveedor/list-facturas-proveedor-mx/list-facturas-proveedor-mx.component.html
+++ b/src/app/modulos/facturas-proveedor/list-facturas-proveedor-mx/list-facturas-proveedor-mx.component.html
@@ -22,7 +22,7 @@
               <th scope="" class="align-middle">Usuario Acreedor</th>
               <th scope="" class="align-middle">Orden de Compra</th>
               <th scope="" class="align-middle">Folio Fiscal</th>
-              <th scope="" class="align-middle">Razón Socia Emisor</th>
+              <th scope="" class="align-middle">Razón Social Emisor</th>
               <th scope="" class="align-middle text-center">Estatus Aprobación </th>
               <th scope="" class="align-middle">Estatus Oracle</th>
               <!-- <th scope="" class="align-middle">Fecha Contabilización</th> -->
